AC_PREREQ(2.50)

AC_INIT(libtprof, 1.0, tfogal@alumni.unh.edu)
AC_CONFIG_SRCDIR([src/tprof.c])
AC_CONFIG_AUX_DIR(.)
AM_CONFIG_HEADER([src/config.h])

AC_CANONICAL_SYSTEM
AC_DEFINE_UNQUOTED(BUILDHOST, 
	"${target_cpu}-${target_os}", 
	[Set to the canonical name of the target machine]
)

AC_SUBST(PROGRAM)
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE([foreign dist-bzip2])

AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_LIBTOOL

AC_HEADER_STDBOOL

dnl Glib.
AM_PATH_GLIB_2_0([2.8.0], , AC_MSG_ERROR([
        *** GLib-2.8.0+ not found!
        GLib version >= 2.8.0 is required to build mcc.
]))

dnl Fill in path variables
test "$prefix" = "NONE" && prefix=/usr/local
test "$exec_prefix" = "NONE" && exec_prefix=$prefix

dnl Harsher/better CFLAGS.
AX_CFLAGS_WARN_ALL

AC_CONFIG_FILES([
    Makefile \
    src/Makefile
])
AC_OUTPUT

AC_MSG_RESULT([
libtprof $VERSION: Automatic configuration acceptable.

  Configuration summary:
    Platform: .......... ${target}
    Compiler Flags: .... ${CFLAGS}
    Linker Flags: ...... ${LDFLAGS}
    Libraries: ......... ${LIBS}

  Installation directories:

    Libdir: ........... ${libdir}
])
